name: b
version: 0.1.0.0

author: Matt "strager" Glazar
build-type: Simple
cabal-version: >=1.8
category: Development
license-file: LICENSE
license: BSD3
maintainer: strager.nds@gmail.com
synopsis: Theoretically awesome build system

library
  exposed-modules:
    B.Build,
    B.Log,
    B.Monad,
    B.Oracle,
    B.Oracle.InMemory,
    B.Oracle.InMemory.Pure,
    B.Oracle.InMemory.ST,
    B.Oracle.InMemory.STM,
    B.Question,
    B.Rule,
    B.RuleDatabase

  build-depends:
    base ==4.6.*,
    containers ==0.5.*,
    semigroups ==0.9.*,
    stm ==2.4.*,
    transformers ==0.3.*

  ghc-options: -Wall

executable example-B
  main-is: B.hs
  hs-source-dirs: examples

  build-depends:
    b,
    base ==4.6.*,
    directory ==1.2.*,
    filepath ==1.3.*,
    transformers ==0.3.*,
    unix ==2.6.*

  ghc-options: -Wall

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  build-depends:
    b,
    base,
    containers,
    hspec == 1.5.*,
    semigroups,
    transformers

  ghc-options: -Wall
