name: b
version: 0.1.0.0

author: Matt "strager" Glazar
build-type: Simple
cabal-version: >=1.8
category: Development
license-file: LICENSE
license: BSD3
maintainer: strager.nds@gmail.com
synopsis: Theoretically awesome build system

library
  exposed-modules:
    B.Build,
    B.File,
    B.Log,
    B.Monad,
    B.Oracle,
    B.Oracle.InMemory,
    B.Oracle.InMemory.Pure,
    B.Oracle.InMemory.ST,
    B.Oracle.InMemory.STM,
    B.Question,
    B.Rule,
    B.RuleDatabase

  build-depends:
    base >=4.6.0 && <5,
    containers,
    directory,
    either,
    filepath,
    semigroups,
    stm,
    transformers,
    unix

  if impl(ghc >= 7.7)
    build-depends: contravariant >= 0.4.2

  if impl(ghc >= 7.7)
    cpp-options: -DHAS_POLYKIND_TYPEABLE=1
  else
    cpp-options: -DHAS_POLYKIND_TYPEABLE=0

  ghc-options: -Wall

executable example-B
  main-is: B.hs
  hs-source-dirs: examples

  build-depends:
    b,
    base,
    directory,
    filepath,
    transformers,
    unix

  ghc-options: -Wall

executable example-Tar
  main-is: Main.hs
  hs-source-dirs: examples/Tar

  build-depends:
    b,
    base,
    containers,
    directory,
    filepath,
    process,
    semigroups,
    transformers,
    unix

  ghc-options: -Wall

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  build-depends:
    b,
    base,
    containers,
    hspec,
    semigroups,
    transformers

  ghc-options: -Wall
