name: b
version: 0.1.0.0

author: Matt "strager" Glazar
build-type: Simple
cabal-version: >=1.8
category: Development
license-file: LICENSE
license: BSD3
maintainer: strager.nds@gmail.com
synopsis: Theoretically awesome build system

flag debug
  description: Enable debug tracing
  default: False

library
  exposed-modules:
    B.Build,
    B.File,
    B.Latch,
    B.Log,
    B.Monad,
    B.Oracle,
    B.Oracle.Binary,
    B.Oracle.InMemory,
    B.Oracle.InMemory.MVar,
    B.Oracle.InMemory.Pure,
    B.Oracle.InMemory.ST,
    B.Parallel,
    B.Question,
    B.Rule,
    B.RuleDatabase,
    B.Simple

  other-modules:
    B.Util.Binary,
    Control.Monad.Trans.Either

  build-depends:
    base >=4.6.0 && <5,
    binary,
    binary-generic,
    bytestring,
    containers,
    monad-parallel,
    semigroups,
    stm,
    system-fileio,
    system-filepath,
    text-binary,
    time,
    transformers

  if impl(ghc >= 7.7)
    build-depends: contravariant >= 0.4.2

  if impl(ghc >= 7.7)
    cpp-options: -DHAS_POLYKIND_TYPEABLE=1
  else
    cpp-options: -DHAS_POLYKIND_TYPEABLE=0

  if flag(debug)
    cpp-options: -DDEBUG

  ghc-options: -Wall

executable example-Tar
  main-is: Main.hs
  hs-source-dirs: examples/Tar

  build-depends:
    b,
    base,
    binary,
    bytestring,
    containers,
    process,
    semigroups,
    system-fileio,
    system-filepath,
    text,
    transformers

  ghc-options: -Wall

executable example-cc
  main-is: Main.hs
  hs-source-dirs: examples/cc

  build-depends:
    b,
    base,
    binary,
    bytestring,
    containers,
    process,
    semigroups,
    stm,
    system-fileio,
    system-filepath,
    text,
    transformers

  ghc-options: -Wall

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  build-depends:
    b,
    base,
    binary,
    containers,
    hspec,
    semigroups,
    transformers

  ghc-options: -Wall
